# PhotoGall

./: .gitignore  CMakeLists.txt  README.md
cmake/: copy.cmake  utils.cmake
resources/: CMakeLists.txt  CollectionInstrumentsPanel.qml  Constants.qml  CurrentPathField.qml  DatePicker.qml  DirectoryTree.qml  ItemSavedSize.qml  SettingsTab.qml  ToolsTabButton.qml  main.qml
src/: CMakeLists.txt  collection.cpp  collection.hpp  collection_manager.cpp  collection_manager.hpp  main.cpp  main.qml  picture_collection.cpp  picture_collection.hpp  picture_list_model.cpp  picture_list_model.hpp  picture_model.cpp  picture_model.hpp  picture_provider.cpp  picture_provider.hpp  tree_model.cpp  tree_model.hpp  utility.cpp  utility.hpp
test/: CMakeLists.txt  test_collection.cpp  tree_model_test.cpp
translations/: PhotoGall_en.ts  PhotoGall_ru.ts
